--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 numpy >= 1.19.1
 scipy >= 1.5.0
 joblib >= 0.16.0
-scikit-learn == 1.3.2
-giotto-ph >= 0.2.1
-pyflagser >= 0.4.3
+scikit-learn >= 1.3.2
+pyflagser == 0.3.0
 igraph >= 0.9.8
 plotly >= 4.8.2
 ipywidgets >= 7.5.1
